--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -5,8 +5,9 @@ spring:
 
 #公共配置与profiles选择无关 mapperLocations指的路径是src/main/resources
 mybatis:
-  typeAliasesPackage: com.first.test.domain
-
+  typeAliasesPackage: com.hfut.pw.domain
+  mapper-locations:
+    - classpath*:com/hfut/pw/dao/**/*.xml
 
 ---
 
